--- a/html/hovers.html
+++ b/html/hovers.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-gb" dir="ltr">
 
   <head>
 
     <!-- site/metas -->
     <title>Kilbeg</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../public/images/favicon.png" />
 
     <!-- google fonts -->
@@ -17,13 +18,14 @@
     <link href="../public/css/rmcc.min.css" rel="stylesheet">
     <link href="../public/css/kcg.css" rel="stylesheet">
     <script src="../public/js/rmcc.min.js"></script>
+    <script src="../public/js/rmcc-icons.min.js"></script>
 
   </head>
 
   <body>
 
-    <h1>Hover Blocks</h1>
-    <div class="rmcc-container rmcc-section-small">
+    <!-- <h1>Hover Blocks</h1> -->
+    <div class="rmcc-container rmcc-section-small" hidden>
       <h1>Standard</h1>
       <ul class="rmcc-grid-small rmcc-child-width-1-3@s rmcc-flex-center" rmcc-grid>
         <li>
@@ -162,6 +164,114 @@
           </div>
         </li>
       </ul>
+    </div>
+
+    <div class="rmcc-grid-collapse" rmcc-grid>
+      <div class="rmcc-width-1-2@m">
+        <div class="rmcc-hover-block rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
+          <div>
+            <img src="../public/images/resource-card.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary blue faint">
+              <div class="rmcc-position-top-left rmcc-padding-large rmcc-width-1-1">
+                <div class="rmcc-position-relative">
+                  <span class="rmcc-position-absolute rmcc-position-bottom-right rmcc-position-small" rmcc-icon="icon: forward; ratio: 3"></span>
+                  <div class="rmcc-width-5-6">
+                    <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Testimonials</p>
+                    <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Customer Story</h4>
+                    <p class="rmcc-text-large">Creating a reference architecture for high availability at Nokia</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="rmcc-transition-fade rmcc-position-cover">
+            <img src="../public/images/resource-building.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary blue faint">
+              <div class="rmcc-position-center rmcc-text-center rmcc-padding">
+                <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Testimonials</p>
+                <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Customer Story</h4>
+                <p class="rmcc-text-large">Creating a reference architecture for high availability at Nokia</p>
+                <button class="rmcc-button rmcc-button-default rmcc-button-fat rmcc-text-emphasis rrrrmcc-button-large rmcc-border-rounded rmcc-text-capitalize slight-bold rmcc-margin-top">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rmcc-width-1-2@m">
+        <div class="rmcc-hover-block rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
+          <div>
+            <img src="../public/images/resource-card.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary faint">
+              <div class="rmcc-position-top-left rmcc-padding-large rmcc-width-1-1">
+                <div class="rmcc-position-relative">
+                  <span class="rmcc-position-absolute rmcc-position-bottom-right rmcc-position-small" rmcc-icon="icon: forward; ratio: 3"></span>
+                  <div class="rmcc-width-5-6">
+                    <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Migration Guide</p>
+                    <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Migrate from MySQL to MariaDB</h4>
+                    <p class="rmcc-text-large">How to get started with MariaDb</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="rmcc-transition-fade rmcc-position-cover">
+            <img src="../public/images/resource-building.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary faint">
+              <div class="rmcc-position-center rmcc-text-center rmcc-padding">
+                <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Migration Guide</p>
+                <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Migrate from MySQL to MariaDB</h4>
+                <p class="rmcc-text-large">How to get started with MariaDb</p>
+                <button class="rmcc-button rmcc-button-default rmcc-button-fat rmcc-text-emphasis rrrrmcc-button-large rmcc-border-rounded rmcc-text-capitalize slight-bold rmcc-margin-top">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rmcc-width-1-2@m">
+        <div class="rmcc-hover-block rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
+          <div>
+            <img src="../public/images/resource-card.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary gradient">
+              <div class="rmcc-position-top-left rmcc-padding-large rmcc-width-1-1">
+                <div class="rmcc-position-relative">
+                  <span class="rmcc-position-absolute rmcc-position-bottom-right rmcc-position-small" rmcc-icon="icon: forward; ratio: 3"></span>
+                  <div class="rmcc-width-5-6">
+                    <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Testimonials</p>
+                    <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Customer Story</h4>
+                    <p class="rmcc-text-large">Creating a reference architecture for high availability at Nokia</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="rmcc-transition-fade rmcc-position-cover">
+            <img src="../public/images/resource-building.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover rmcc-overlay rmcc-overlay-primary gradient faint">
+              <div class="rmcc-position-center rmcc-text-center rmcc-padding">
+                <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Testimonials</p>
+                <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Customer Story</h4>
+                <p class="rmcc-text-large">Creating a reference architecture for high availability at Nokia</p>
+                <button class="rmcc-button rmcc-button-default rmcc-button-fat rmcc-text-emphasis rrrrmcc-button-large rmcc-border-rounded rmcc-text-capitalize slight-bold rmcc-margin-top">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rmcc-width-1-2@m">
+        <div class="rmcc-hover-block rmcc-inline-clip rmcc-transition-toggle rmcc-light" tabindex="0">
+          <div>
+            <img src="../public/images/resource-card.jpg" class="rmcc-height-large cover" width="1800" height="1800" alt="">
+            <div class="rmcc-position-cover">
+              <div class="rmcc-position-center rmcc-text-center rmcc-padding">
+                <p class="rmcc-text-meta rmcc-text-lead rmcc-text-uppercase rmcc-margin-small-bottom">Migration Guide</p>
+                <h4 class="rmcc-margin-remove rmcc-text-bold rmcc-text-capitalize rmcc-h1">Migrate from MySQL to MariaDB</h4>
+                <p class="rmcc-text-large">How to get started with MariaDb</p>
+                <button class="rmcc-button rmcc-button-default rmcc-button-fat rmcc-text-emphasis rrrrmcc-button-large rmcc-border-rounded rmcc-text-capitalize slight-bold rmcc-margin-top">Learn More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
   </body>
