--- a/html/buttons.html
+++ b/html/buttons.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-gb" dir="ltr">
 
   <head>
 
     <!-- site/metas -->
     <title>Kilbeg</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="../public/images/favicon.png" />
 
     <!-- google fonts -->
@@ -17,6 +18,7 @@
     <link href="../public/css/rmcc.min.css" rel="stylesheet">
     <link href="../public/css/kcg.css" rel="stylesheet">
     <script src="../public/js/rmcc.min.js"></script>
+    <script src="../public/js/rmcc-icons.min.js"></script>
 
   </head>
 
