--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
     </div>
 
     <!-- search popup -->
-    <div id="modal-full" class="rmcc-modal-full rmcc-modal" rmcc-modal="" tabindex="-1" style="">
+    <div id="modal-full" class="rmcc-modal-full rmcc-modal" rmcc-modal>
       <div class="rmcc-modal-dialog rmcc-flex rmcc-flex-center rmcc-flex-middle" rmcc-height-viewport="" role="dialog" aria-modal="true" style="min-height: calc(929px);">
         <button class="rmcc-modal-close-full rmcc-icon rmcc-close" type="button" rmcc-close="" aria-label="Close"></button>
         <form class="rmcc-search rmcc-search-large">
@@ -1002,6 +1002,7 @@
         MyJobsObject.renderTheJobs('#MyJobs');
       })();
     </script>
+    
   </body>
 
 </html>
